fixed the layout issue at 1024px

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ strong {
         padding: 30px;
     }
     .portfolio-img {
-        width: 45vw;
+        width: 100%;
     }
     .portfolio-row {
         flex-direction: row;
@@ -212,14 +212,14 @@ strong {
         margin-left: 30px;
     }
     .portfolio-img {
-        width: 30vw;
+        width: 100%;
     }
     .portfolio-row {
         flex-direction: row;
         flex-wrap: wrap;
     }
     .portfolio-column {
-        width: 30vw;
+        width: 28vw;
     }
     p.portfolio-p {
         text-align: center;
